# Schplot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  schplot.py
schplot/: __main__.py  logic.py  plot_settings.py  ui.py
